feat: add structure oh index.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,138 @@
 <!doctype html>
 <html lang="ru">
-  <head>
+<head>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/main.css">
-    <title>Page title</title>
+    <title>CV-html-VASIN</title>
     
-  </head>
-  <body>
-    <img src="images/company-logo.png" alt="Company">
-    <h1 class="hello-world">Hello, world!</h1>asdfa
-    asdf
-    <div class="d-test">
-        <h2>Test css</h2>
-        <h2 class="teg">Test Green</h2>
-    </div>
-  </body>
+</head>
+<body>
+    
+    <section class="main">
+        <div class="profile">
+            <img src="https://gf.sitadas.ru/vasin.jpg" alt="Company">
+            <h1 class="font-heavy">Vasin Vasily</h1>
+            <p>Cv for Junior-developer</p>
+        </div>
+        <div class="contact">
+            <h3>Contacts</h3>
+            <p>Phone: 8(906) 340-18-00</p>
+            <p>E-mail: vasin.vasily.a@gmail.com</p>
+        </div>
+        <div class="about">
+            <h3>About</h3>
+            <p>From 2010 to 2018 I worked as a marketer. I always liked IT development, so I decided to change my profile. There is still little practice and skills in WEB development, but I constantly study courses and video tutorials on html / css, JS, PHP.</p>
+        </div>
+        <div class="skills">
+            <h3>Skills</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Skill</th>
+                        <th>10 point scale</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Html</td>
+                        <td>7</td>
+                    </tr>
+                    <tr>
+                        <td>Css</td>
+                        <td>7</td>
+                    </tr>
+                    <tr>
+                        <td>Scss</td>
+                        <td>7</td>
+                    </tr>
+                    <tr>
+                        <td>Gulp</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>Js</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Docker</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Node and npm</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Php</td>
+                        <td>2</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="example">
+            <h3>Examples of work</h3>
+            <ul>
+                <li>Blogs:
+                    <ul>
+                        <li><a target="_blank" href="https://ruscur.ru">ruscur.ru</a></li>
+                        <li><a target="_blank" href="https://gidfinance.ru">gidfinance.ru</a></li>
+                    </ul>
+                </li>
+                <li>Landings:
+                    <ul>
+                        <li><a target="_blank" href="https://orgmlm.ru/webinar.html">orgmlm.ru</a></li>
+                        <li><a target="_blank" href="https://banket.biz/">banket.biz</a></li>
+                        <li><a target="_blank" href="http://prosto-beloe.ru/">prosto-beloe.ru</a></li>
+                        <li><a target="_blank" href="https://srubovoidom.ru/">srubovoidom.ru</a></li>
+                        <li><a target="_blank" href="https://kraskaderevo.ru/">kraskaderevo.ru</a></li>
+                        <li><a target="_blank" href="https://pogonage.ru/">pogonage.ru</a></li>
+                    </ul>
+                </li>
+                <li>Portals:
+                    <ul>
+                        <li><a target="_blank" href="http://ceny.ortodonta.ru/">ceny.ortodonta.ru</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="experience">
+            <h3>Work experience</h3>
+            <ul>
+                <li><strong>Gidfinance</strong>  : Web-developer
+                    <ul>
+                        <li>Feb. 2020 - today</li>
+                        <li><strong>Tasks:</strong> create new finance portals with Yii2 (code base, business logic), support lagacy project with Joomla cms, Wordpress cms.</li>
+                        <li><strong>Stack:</strong> Php, Yii2, Docker, Git, Gulp.</li>
+                    </ul>
+                </li>
+                <li><strong>Perfect Organics</strong>  : Web-developer
+                    <ul>
+                        <li>Jun. 2019 - Feb. 2020</li>
+                        <li><strong>Tasks:</strong> create landing pages, support lagacy project with Yii2, development of an online store with Bitrix24</li>
+                        <li><strong>Stack:</strong> bitrix, Yii2, UiKit, bootstrap</li>
+                    </ul>
+                </li>
+                <li><strong>Be-Force</strong>  : Web-developer
+                    <ul>
+                        <li>Jan. 2019 - Jun. 2019</li>
+                        <li><strong>Tasks:</strong> create landing pages, support CRM AmoCrm, support e-mail servers</li>
+                        <li><strong>Stack:</strong> html, Css, bootstrap</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="edu">
+            <h3>Education</h3>
+            <ul>
+                <li>Rolling Scopes 2020 Q3</li>
+            </ul>
+        </div>
+        <div class="Eng">
+            <h3>English language</h3>
+            <ul>
+                <li>B2</li>
+            </ul>
+        </div>
+    </section>
+</body>
 </html>
